--- a/webclient/index.html
+++ b/webclient/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4kXyqxZtMNRfYZwb0PzIKdpfjpoetXLc&callback=initMap" type="text/javascript"></script> -->
 </head>
 
 <body>
   <div id="map">
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1wwKWC-U6hsLdJ37pgNclnChNUWfACogh" width="100%" height="100%"></iframe>
   </div>
   <script src="./src/script.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4kXyqxZtMNRfYZwb0PzIKdpfjpoetXLc&callback=initMap" type="text/javascript"></script>
 </body>
 
 </html>
