--- a/webclient/index.html
+++ b/webclient/index.html
@@ -11,7 +11,11 @@
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4kXyqxZtMNRfYZwb0PzIKdpfjpoetXLc&callback=initMap" type="text/javascript"></script> -->
 </head>
 
-<body>
+<body onload="contiuousCall();setup()">
+  <div id="userPanel">
+    <button id="current">Veszélyforrás bejelentése jelenlegi helyzet alapján</button>
+    <input id="jajj" type="text" placeholder = "Veszélyforrás, pl Medve" value="SAD"></input>
+  </div>
   <div id="map">
   </div>
   <script src="./src/script.js"></script>
