--- a/webclient/index.html
+++ b/webclient/index.html
@@ -13,8 +13,9 @@
 
 <body onload="contiuousCall();setup()">
   <div id="userPanel">
-    <button id="current">Veszélyforrás bejelentése jelenlegi helyzet alapján</button>
-    <input id="jajj" type="text" placeholder = "Veszélyforrás, pl Medve" value="SAD"></input>
+    <button id="current">Veszélyforrás bejelentése megjelolt alapjan</button>
+    <input id="jajj" type="text" placeholder = "Veszélyforrás, pl Medve" value="Medve"></input>
+    <button id="stat">Statisztika lekerese</button>
   </div>
   <div id="map">
   </div>
